# data-engineer-case

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pipeline.py  pyproject.toml  requirements.txt
etl/: factory.py
notebooks/: project_decisions_explanations.ipynb  utils.py
