[tool.poetry]
name = "etl"
version = "0.1.0"
description = "Data preparation and pipeline for ML modeling"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "etl"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.4"
numpy = "^1.21.4"
jupyter = "^1.0.0"
tqdm = "^4.66.2"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
